Se completa conclusion y desarrollo

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -38,7 +38,7 @@ La exposición de los menores de edad a los riesgos del entorno digital requiere
 \hline
 \textbf{Australia} \newline Online Safety Act & 16 años & Prohíbe el acceso a redes sociales a menores de 16 años. Requiere verificación de edad a los titulares de cuentas en las plataformas restringidas. Vigente: 10 de Diciembre 2025. \\
 \hline
-\textbf{Unión Europea} \newline Digital Services Act & 13 años (Aprobación PE) \newline Debate: 15/16 años & Exige a las grandes plataformas online (VLOPs) que eliminen mecanismos adictivos. Busca implementar la "Cartera Digital" europea para control de edad más efectivo. Vigente: 16 de Noviembre 2022. \\
+\textbf{Unión Europea} \newline Digital Services Act & 13 años (Aprobación PE) \newline Debate: 15/16 años & Exige a las grandes plataformas online (VLOPs) que eliminen mecanismos adictivos. Busca implementar la "Cartera Digital" euro{p}ea para control de edad más efectivo. Vigente: 16 de Noviembre 2022. \\
 \hline
 \end{tabular}
 \caption{Comparación de regulaciones internacionales sobre protección de menores en redes sociales}
@@ -57,8 +57,15 @@ La exposición de los menores de edad a los riesgos del entorno digital requiere
 La regulación de las redes sociales impone deberes de control que generan un impacto directo en las distintas generaciones de derechos.
 
 \begin{enumerate}
-    \item \textbf{Libertad de expresión y la primera Generación :} [Explicar sobre cómo los filtros y controles podrían afectar la libertad de expresión y van en contra de lo que la primera generación]
-    \item \textbf{Refuerzo de la tercera y cuarta generación:} [Explicar cómo la regulación busca proteger los derechos colectivos y digitales de los menores de edad, reforzando la 3era y 4ta generación de derechos. También comentar sobre cómo la verificación de edad genera incertidumbre sobre cómo se van a proteger los datos personales(no solo para los menores, los adultos también).]
+    \item \textbf{Libertad de expresión y la primera Generación :} Los filtros y controles de contenido pueden crear efectos de censura que limitan la libertad de expresion. existe el riesgo de algoritmos de deteccion eliminen contenido legitimo o que la autocensura se incremente por temos a las restricciones. Esto plantea un dilema entre proteger a los menores sin pisar los principio que caracterizan a los derechos de primera generacion.
+
+    \item \textbf{Refuerzo de la tercera y cuarta generación:} La regulacion internacional se justifica ya que los usuarios no tienen el mismo nivel de conocimiento tecnico que tienen las plataformas digitales. Por lo que la regulacion busca proteger los derechos colectivos.
+
+    \begin{itemize}
+        \item \textbf{Libertad de expresion:} El control algoritmico y el profiling se basan en almacenar los datos de forma indiscriminada, lo que genera un oligopolio de la infomacion y pone en riesgo la autodetermincacion informativa de los usuarios. Al exigir que las grandes plataformas eliminen los mecanismos adictivos y prohibir el profiling par amenores, se refuerza el control del individuo sobre sus datos personales.
+        
+        \item \textbf{Proteccion de datos y verificacion de edad:} Implementar sistemas de verificacion de edad por parte de las plataformas connleva grandes riesfgos de privacidad. La recoleccion de datos sensibles necesarios para esta verificacion genera una gran incertidumbre sobre como se van a proteger estos datos. Esto aplica tanto a menores como a los adultos, ya que ambos pueden verse afectados por la mala gestion de estos datos.
+    \end{itemize}
 \end{enumerate}
 
 \section{¿Cómo aborda la justicia Argentina la regulación de redes sociales?}La justicia argentina aborda los conflictos del entorno digital aplicando los principios generales del derecho adaptándolos a un contexto tecnológico.
@@ -75,7 +82,13 @@ La ley 27.078(Ley argentina Digital) declara de interés público el desarrollo 
     \item \textbf{Inviolabilidad de las comunicaciones :} Garantiza la inviolabilidad de la correspondencia y comunicaciones electrónicas, incluyendo los datos de tráfico. Su intercepción solo puede realizarse mediante una orden judicial.
 \end{enumerate}
 
-Los proveedores de servicio también tienen el deber de prevenir el daño(Art 1710 CCyC) y la obligación de ofrecer software de protección y recomendar el uso de programas de bloqueo de sitios PICS.[REVISAR!!!]
+Los proveedores de servicio también tienen el deber de prevenir el daño que tiene cualquier otra persona(Art 1710 CCyC), lo que les exige tener que adoptar medidas necesarios para evcitar que se produzca un daño o en el peor de los casos disminur su magnitud. Esto se ve reforzado por las olbigaciones legales especificas:
+
+\begin{enumerate}
+    \item \textbf{La bolicacion de ofrecer software de proteccion que impida el acceso a sitios especificos}, al momento de ofercer los servicios de internet(ley 25.690).
+
+    \item \textbf{La obligacion de informar y recomendar el uso de programas de bloqueo de sitios}, en las facturas que emiten. Esta inscripcion debe recomendar a los padres a "ejercer  un razonable control por los contenidos que consumen sus hijos" y aconsejar que consulten con el proveedor para que les brinde asesoramiento sobre programas de bloqueo de sitios.  
+\end{enumerate}
 
 \subsection{Responsabilidad parental y el sharenting}
 
