Se arreglan errores de ortografia

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,8 +1,8 @@
 \section*{CONCLUSIÓN}
 \addcontentsline{toc}{section}{CONCLUSIÓN}
 
-el avance constante de la tecnologia transformo la forma en la que interactuamos y nos comunicamos entre nosotros. Estos cambios trajeron consigo nuevos desafios y riestos, sobre todo cuando se trata de proteger a los menores de edad. Esto genera la necesidad de establecer marcos regulatorios que los protejan pero que su vez no limiten su libertad de expresion y acceso a la informacion.
+El avance constante de la tecnología transformó la forma en la que interactuamos y nos comunicamos entre nosotros. Estos cambios trajeron consigo nuevos desafíos y riesgos, sobre todo cuando se trata de proteger a los menores de edad. Esto genera la necesidad de establecer marcos regulatorios que los protejan pero que a su vez no limiten su libertad de expresión y acceso a la información.
 
-La regulacion internacional muestra que no existe una solucion unica, mientras en la union europea se opto por un enfoque que mezcla la regulacion de datos y la tranaparecnaid e los algoritmos, en australia se tomo una medida mas drastica prohibiendo el acceso a las redes sociales para los menores de 16 años. Un gran desafio que tienen estas regulacion  es encontrar el equilobrio en la proteccion de los derechos de primera generacion y la cuarta generacion, ya que la proteccion de los datos busca prevenir que que la dignidad humana se vea afectada por el manejo inscriminado de los datos personales.
+La regulación internacional muestra que no existe una solución única, mientras en la Unión Europea se optó por un enfoque que mezcla la regulación de datos y la transparencia de los algoritmos, en Australia se tomó una medida más drástica prohibiendo el acceso a las redes sociales para los menores de 16 años. Un gran desafío que tienen estas regulaciones es encontrar el equilibrio en la protección de los derechos de primera generación y la cuarta generación, ya que la protección de los datos busca prevenir que la dignidad humana se vea afectada por el manejo indiscriminado de datos personales.
 
-En Argentina, el marco juridico actual nos da una base solida que requiere actualizacion que permita abordar estos problemas y la ley de proteccion de datos personales deberia incluir disposiciones especificar sobre algoritmos y verificacion de edad.
+En Argentina, el marco jurídico actual nos da una base sólida que requiere actualización que permita abordar estos problemas y la ley de protección de datos personales debería incluir disposiciones específicas sobre algoritmos y verificación de edad.
