--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -57,18 +57,20 @@ La exposición de los menores de edad a los riesgos del entorno digital requiere
 La regulación de las redes sociales impone deberes de control que generan un impacto directo en las distintas generaciones de derechos.
 
 \begin{enumerate}
-    \item \textbf{Libertad de expresión y la primera Generación :} Los filtros y controles de contenido pueden crear efectos de censura que limitan la libertad de expresion. existe el riesgo de algoritmos de deteccion eliminen contenido legitimo o que la autocensura se incremente por temos a las restricciones. Esto plantea un dilema entre proteger a los menores sin pisar los principio que caracterizan a los derechos de primera generacion.
+    \item \textbf{Libertad de expresión y la primera Generación :} Los filtros y controles de contenido pueden crear efectos de censura que limitan la libertad de expresión. Existe el riesgo de que algoritmos de detección eliminen contenido legítimo o que la autocensura se incremente por temores a las restricciones. Esto plantea un dilema entre proteger a los menores sin vulnerar los principios que caracterizan a los derechos de primera generación.
 
-    \item \textbf{Refuerzo de la tercera y cuarta generación:} La regulacion internacional se justifica ya que los usuarios no tienen el mismo nivel de conocimiento tecnico que tienen las plataformas digitales. Por lo que la regulacion busca proteger los derechos colectivos.
+    \item \textbf{Refuerzo de la tercera y cuarta generación:} La regulación internacional se justifica ya que los usuarios no tienen el mismo nivel de conocimiento técnico que tienen las plataformas digitales. Por lo que la regulación busca proteger los derechos colectivos.
 
     \begin{itemize}
-        \item \textbf{Libertad de expresion:} El control algoritmico y el profiling se basan en almacenar los datos de forma indiscriminada, lo que genera un oligopolio de la infomacion y pone en riesgo la autodetermincacion informativa de los usuarios. Al exigir que las grandes plataformas eliminen los mecanismos adictivos y prohibir el profiling par amenores, se refuerza el control del individuo sobre sus datos personales.
+        \item \textbf{Libertad de expresión:} El control algorítmico y el profiling se basan en almacenar los datos de forma indiscriminada, lo que genera un oligopolio de la información y pone en riesgo la autodeterminación informativa de los usuarios. Al exigir que las grandes plataformas eliminen los mecanismos adictivos y prohibir el profiling para menores, se refuerza el control del individuo sobre sus datos personales.
         
-        \item \textbf{Proteccion de datos y verificacion de edad:} Implementar sistemas de verificacion de edad por parte de las plataformas connleva grandes riesfgos de privacidad. La recoleccion de datos sensibles necesarios para esta verificacion genera una gran incertidumbre sobre como se van a proteger estos datos. Esto aplica tanto a menores como a los adultos, ya que ambos pueden verse afectados por la mala gestion de estos datos.
+        \item \textbf{Protección de datos y verificación de edad:} Implementar sistemas de verificación de edad por parte de las plataformas conlleva grandes riesgos de privacidad. La recolección de datos sensibles necesarios para esta verificación genera una gran incertidumbre sobre cómo se van a proteger estos datos. Esto aplica tanto a menores como a los adultos, ya que ambos pueden verse afectados por la mala gestión de estos datos.
     \end{itemize}
 \end{enumerate}
 
-\section{¿Cómo aborda la justicia Argentina la regulación de redes sociales?}La justicia argentina aborda los conflictos del entorno digital aplicando los principios generales del derecho adaptándolos a un contexto tecnológico.
+\section{¿Cómo aborda la justicia Argentina la regulación de redes sociales?}
+
+La justicia argentina aborda los conflictos del entorno digital aplicando los principios generales del derecho adaptándolos a un contexto tecnológico.
 
 \subsection{Responsabilidad de los proveedores de servicios}
 
@@ -82,12 +84,12 @@ La ley 27.078(Ley argentina Digital) declara de interés público el desarrollo 
     \item \textbf{Inviolabilidad de las comunicaciones :} Garantiza la inviolabilidad de la correspondencia y comunicaciones electrónicas, incluyendo los datos de tráfico. Su intercepción solo puede realizarse mediante una orden judicial.
 \end{enumerate}
 
-Los proveedores de servicio también tienen el deber de prevenir el daño que tiene cualquier otra persona(Art 1710 CCyC), lo que les exige tener que adoptar medidas necesarios para evcitar que se produzca un daño o en el peor de los casos disminur su magnitud. Esto se ve reforzado por las olbigaciones legales especificas:
+Los proveedores de servicio también tienen el deber de prevenir el daño que tiene cualquier otra persona (Art 1710 CCyC), lo que les exige tener que adoptar medidas necesarias para evitar que se produzca un daño o en el peor de los casos disminuir su magnitud. Esto se ve reforzado por las obligaciones legales específicas:
 
 \begin{enumerate}
-    \item \textbf{La bolicacion de ofrecer software de proteccion que impida el acceso a sitios especificos}, al momento de ofercer los servicios de internet(ley 25.690).
+    \item \textbf{La obligación de ofrecer software de protección que impida el acceso a sitios específicos}, al momento de ofrecer los servicios de internet (ley 25.690).
 
-    \item \textbf{La obligacion de informar y recomendar el uso de programas de bloqueo de sitios}, en las facturas que emiten. Esta inscripcion debe recomendar a los padres a "ejercer  un razonable control por los contenidos que consumen sus hijos" y aconsejar que consulten con el proveedor para que les brinde asesoramiento sobre programas de bloqueo de sitios.  
+    \item \textbf{La obligación de informar y recomendar el uso de programas de bloqueo de sitios}, en las facturas que emiten. Esta inscripción debe recomendar a los padres a "ejercer un razonable control por los contenidos que consumen sus hijos" y aconsejar que consulten con el proveedor para que les brinde asesoramiento sobre programas de bloqueo de sitios.  
 \end{enumerate}
 
 \subsection{Responsabilidad parental y el sharenting}
@@ -96,7 +98,9 @@ La Responsabilidad parental es el conjunto de deberes y derechos que tienen los 
 
 La ley 26.061 establece que los menores tienen el derecho a ser respetados en su dignidad, reputación y propia imagen.
 
-El sharenting es la práctica de los padres donde comparten contenido relacionado con sus hijos en las redes sociales y ha generado jurisprudencia debido a la ausencia de legislación donde los tribunales intervinieron para proteger los derechos personalísimos de los hijos.\begin{enumerate}
+El sharenting es la práctica de los padres donde comparten contenido relacionado con sus hijos en las redes sociales y ha generado jurisprudencia debido a la ausencia de legislación donde los tribunales intervinieron para proteger los derechos personalísimos de los hijos.
+
+\begin{enumerate}
     \item \textbf{V. F. C/ S. B. S/ MEDIDAS PRECAUTORIAS (ART. 232 DEL CPCC) :} en el fallo el Padre(V. F. C.) solicita que se intime a la madre(S. B.) a abstenerse de subir fotos y videos de sus hijas en redes sociales con fines comerciales.
     El tribunal aplicó el interés superior del niño, dándole prioridad a los derechos personalísimos de las niñas sobre el derecho a la libertad de expresión de la madre.
 
