Se agrega informacion sobre el caso Discord

--- a/desarrollo.tex
+++ b/desarrollo.tex
@@ -68,6 +68,21 @@ La regulación de las redes sociales impone deberes de control que generan un im
     \end{itemize}
 \end{enumerate}
 
+\subsection{Verificacion de edad y sus riesgos: El caso de Discord[Este titulo esta bien? revisar despues]}
+
+Discord es una aplicacion de mensajeria que permite a los usuarios crear servidores y canales para comunicarse a traves de texto, voz y video. 
+
+Durante abril del 2025 Discord comenzo a implementar un sistema de verificacion de edad solicitando una foto de un documento de identidad para adelantarse a las futuras regulaciones, prometiendo que las fotos solo se iban a usar para la verficicaion y que no iban a ser almacenadas.
+
+Sin embargo, en octubre del 2025 un incente de seguridad que sufrio un proveedor externo de servicios(5SA) puso en compromiso los datos personales de unos 70.000 usuarios, incluyendo las fotos de los documentos de identidad que se usaron para verificacion de edad.
+
+Este caso pone en evidencia uqe mas alla de que proteger a los menores de edad, la verificacion de edad trae nuevos riesgos que se deben considerar al momento de implementar estos sistemas y se debe tener un marco de seguridad legal que imponga:
+\begin{itemize}
+        \item la obligacion de garantizar que las plataformas adopten medidas de seguridad y confindencialidad para proteger los datos personales sensibles
+        \item La supresion de datos sensisbles una vez que  se haya completado la funcional para la que fueron recolectados.
+        \item Delegar los procesos de verificacion a proveedres externo no debe sacar la responsabilidad de proteger los datos personales a las plataformas digitales. 
+\end{itemize}
+
 \section{¿Cómo aborda la justicia Argentina la regulación de redes sociales?}
 
 La justicia argentina aborda los conflictos del entorno digital aplicando los principios generales del derecho adaptándolos a un contexto tecnológico.
