Se agregan mas fuentes a la bibliografia

--- a/bibliografia.tex
+++ b/bibliografia.tex
@@ -25,4 +25,16 @@
     \item \href{http://servicios.infoleg.gob.ar/infolegInternet/anexos/70000-74999/70749/norma.htm}{\textit{Ley N° 25.506 (Firma Digital)}}.
     
     \item \href{http://servicios.infoleg.gob.ar/infolegInternet/anexos/135000-139999/136483/norma.htm}{\textit{Ley N° 26.388 (Delitos Informáticos)}}.
+    
+    \item \href{https://servicios.infoleg.gob.ar/infolegInternet/anexos/235000-239999/239771/texact.htm}{\textit{Ley N° 27.078 (Argentina Digital)}}.
+    
+    \item \href{https://www.saij.gob.ar/claudio-fabricio-leiva-responsabilidad-danos-derivados-internet-reparacion-prevencion-danos-dacc050074-2005/123456789-0abc-defg4700-50ccanirtcod}{\textit{Responsabilidad por daños derivados de Internet}}. Claudio F. Leiva, SAIJ.
+    
+    \item \href{https://scba.gov.ar/includes/descarga.asp?id=48629&n=Ver%20sentencia%20(causa%20N%BA%203672).pdf}{\textit{V. F. C/ S. B. S/ MEDIDAS PRECAUTORIAS}}. Suprema Corte de Justicia de la Provincia de Buenos Aires, Causa N° 3672.
+    
+    \item \href{https://sj.csjn.gov.ar/homeSJ/notas/nota/50/documento}{\textit{Nuevas Tecnologías: Plataformas digitales y competencia}}. Corte Suprema de Justicia de la Nación.
+    
+    \item \href{https://discord.com/press-releases/update-on-security-incident-involving-third-party-customer-service}{\textit{Update on a Security Incident Involving Third-Party Customer Service}}. Discord Press Release.
+    
+    \item \href{https://www.bbc.com/news/articles/c8jmzd972leo}{\textit{ID photos of 70,000 users may have been leaked, Discord says}}. BBC News.
 \end{itemize}
