Se agrega la fecha de final a la caratula

--- a/caratula.tex
+++ b/caratula.tex
@@ -23,7 +23,7 @@
 \hline
 \textbf{Docente:} & Valeria Alejandra Sosa \\
 \hline
-\textbf{Fecha de Presentación:} & [Fecha] \\
+\textbf{Fecha de Presentación:} & 12/12/2025 \\
 \hline
 \end{tabular}
 \end{table}
