Cambios en la conclusion

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -5,4 +5,6 @@ El avance constante de la tecnología transformó la forma en la que interactuam
 
 La regulación internacional muestra que no existe una solución única, mientras en la Unión Europea se optó por un enfoque que mezcla la regulación de datos y la transparencia de los algoritmos, en Australia se tomó una medida más drástica prohibiendo el acceso a las redes sociales para los menores de 16 años. Un gran desafío que tienen estas regulaciones es encontrar el equilibrio en la protección de los derechos de primera generación y la cuarta generación, ya que la protección de los datos busca prevenir que la dignidad humana se vea afectada por el manejo indiscriminado de datos personales.
 
-En Argentina, el marco jurídico actual nos da una base sólida que requiere actualización que permita abordar estos problemas y la ley de protección de datos personales debería incluir disposiciones específicas sobre algoritmos y verificación de edad.
+El caso de Discord muestra cómo la implementación de un sistema de verificación de edad puede generar riesgos críticos en la seguridad de los datos y que si bien la verificación de edad es importante para proteger a los menores, el no garantizar que los datos sensibles sean eliminados adecuadamente puede exponer a todos los usuarios a problemas más graves.
+
+En Argentina, el marco jurídico actual nos da una base sólida que requiere actualización para poder abordar estos problemas. La Ley de Protección de Datos Personales (25.326) ya establece el principio de calidad de los datos y obliga a que la recolección sea adecuada y no excesiva, y que estos datos sean destruidos una vez que se cumpliera la finalidad para la que fue recolectado. Sin embargo, esta ley debería incluir una disposición específica sobre los algoritmos y la verificación de edad para controlar las decisiones automatizadas que pueden poner en peligro la dignidad de la persona.
